# IA2025.2

./: .gitignore  README.md  main.py  pyproject.toml  searches.py  ui.py  video.py
Trabalho1/: README.md  main.py  pyproject.toml  ui.py  video.py
Trabalho2/: README.md  clean_data.py  data_cleaning.ipynb  eda.ipynb  gui.py  main.py  model_interface.py  modelling.ipynb  pyproject.toml  requirements.txt  ui.py  xgb_model.json  xgb_model_rent.json
Trabalho2/explicacoes_legalzinhas/: modelinhos.ipynb
Trabalho2/models/: gamma_identity.pickle  ols.pickle  xgb_model.json
Trabalho2/parser/: export_parquet.py  parse_roca.py
